Create views for users

--- a/app/views/user_posts/show.html.erb
+++ b/app/views/user_posts/show.html.erb
@@ -1,1 +1,1 @@
-<h1>Here is a list of posts for user with id: <%= @id %></h1>
+<h1>Here is the post with id: <%= @id %> from the user with id: <%= @user_id %></h1>
