--- a/app/views/users/_user_profile.html.erb
+++ b/app/views/users/_user_profile.html.erb
@@ -1,9 +1,9 @@
 <section>
   <div class="display mt-5">
-    <%= image_tag user_img(user), :class => "border border-3 border-dark" %>
-    <div class="user_list border border-3 border-dark d-flex justify-content-between py-5">
+    <%= image_tag user_img(user), :class => "avatar border border-2 border-dark" %>
+    <div class="user_list border border-1 border-dark d-flex justify-content-between py-5">
       <h2 class="user_name"><%= user.name %></h2>
-      <p class="num_post flex-row-reverse fs-6">Number of posts: <%= user.posts.size %></p>
+      <p class="num_post flex-row-reverse fs-6 mt-4">Number of posts: <%= user.posts.size %></p>
     </div>
   </div>
 </section>
