--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,29 @@
-<h1>Here is the profile page of user with id: <%= @id %></h1>
+<div>
+  <%= render partial: "user_profile", locals: {user: @user} %>
+  <div class="border border-1 border-dark container p-2 my-5 bio">
+    <h3 class="py-4">Bio</h3>
+    <p><%= @user.bio %> </p>
+  </div>
+  <ul class="recent-posts">
+    <% @user.recent_posts.each do |p| %>
+      <li class="border border-1 border-dark container p-2 my-5 bio" >
+        <div>
+          <div>
+            <%= link_to user_post_path(@user.id, p.id), id: "user_post#{p.id}" do %>
+              <h4 class="py-4"><%= p.title %></h4>
+            <% end %>
+            <p><%= p.text.truncate(54) %> </p>
+          <div>
+          <div class="social-metrics d-flex justify-content-end gap-2 mr-3">
+            <span>Comments: <%= p.comments.size %></span>
+            <span>Likes: <%= p.likes.size %></span>
+          </div>
+        </div>
+      </div>
+    </li>
+  <% end %>
+  </ul>
+  <div>
+    <%= link_to "See all posts", user_posts_path(@user.id), class: "btn btn-primary d-flex justify-content-center align-self-center mb-5 button display" %>
+  <div>
+</div>
