--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,16 @@
-<h1>Here is the post with id: <%= @id %> from the user with id: <%= @user_id %></h1>
+<div class="profile__container">
+  <div class="post">
+    <div class="border border-3 border-dark container p-2 my-5 bio">
+      <div class="d-flex justify-content-between my-3">
+        <h4><%= @post.title %> by <%= link_to user_path(@post.user.id) do %> <%= @post.user.name %> <% end %></h4>
+        <p>Comments : <%= @post.comments.size%>  Likes : <%= @post.likes.size %> </p>
+      </div>
+        <p><%= @post.text %> </p>
+    </div>
+    <ul class="border border-2 border-dark container p-2 my-5 bio">
+      <% @post.comments.each do |c| %>
+        <li><%= c.user.name %>: <%= c.text%></li>
+      <% end %>
+    </ul>
+  </div>
+</div>
