--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,9 @@
-<div class="profile__container">
-  <div class="post">
+<nav class="fs-6 p-3 container mt-2 p-2 bio">
+  <%= link_to "Home", root_path %>
+</nav>
+
+<div>
+  <div>
     <div class="border border-3 border-dark container p-2 my-5 bio">
       <div class="d-flex justify-content-between my-3">
         <h4><%= @post.title %> by <%= link_to user_path(@post.user.id) do %> <%= @post.user.name %> <% end %></h4>
@@ -12,5 +16,7 @@
         <li><%= c.user.name %>: <%= c.text%></li>
       <% end %>
     </ul>
-  </div>
+    
+    <%= render "comments/create" %>
+
 </div>
