--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -66,3 +66,15 @@ ul {
   width: 10%;
   text-align: center;
 }
+
+.msg {
+  width: 70%;
+  margin: 20px auto;
+  display: flex;
+  align-items: center;
+}
+
+input::placeholder,
+textarea::placeholder {
+  font-style: italic;
+}
