Fix bug related to comment creation in CommentsController

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,7 +16,7 @@
         <li><%= c.user.name %>: <%= c.text%></li>
       <% end %>
     </ul>
-    
-    <%= render "comments/create" %>
+
+    <%= render partial: "comments/create" %>
 
 </div>
