Style the devise views with Bootstrap classes

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -18,7 +18,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", data: {disable_with: "Editing..."}, class: "btn btn-primary my-3" %>
   </div>
 <% end %>
 
